# connect4

./: README.md  makefile  pyproject.toml
connect4/: bot.py  game.py  game_logic.py
tests/: test_bot.py  test_game.py  test_game_logic.py
