[tool.poetry]
name = "connect4"
version = "0.1.0"
description = "A Connect 4 game where a user can play against a bot"
authors = ["Stas Sajin <sajin.stanislav@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7"
streamlit = "1.36.0"
watchdog = "^4.0.1"
numpy="1.24.4"


[tool.poetry.dev-dependencies]
ruff = "0.5.2"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.per-file-ignores]
